Added health status checker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:label="@string/app_name">
         </activity>
         <activity
+            android:name=".StatusActivity"
+            android:label="Status Activity" />
+
+        <activity
             android:name=".Signupclass"
             android:label="@string/app_name" />
         <activity
