--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'mysql:mysql-connector-java:5.1.49'
     implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'androidx.constraintlayout:constraintlayout:<version>'
+
 //    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
 //    implementation files('src/main/java/libs/mysql-connector-java-5.1.14.jar')
